.metadata/.plugins/org.eclipse.cdt.ui/Embedded_OS_Lab2_NE6091116.build.log
19:57:34 **** Incremental Build of configuration Debug for project Embedded_OS_Lab2_NE6091116 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DDEBUG -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/chien/STM32CubeIDE/workspace_1.5.1/Embedded_OS_Lab2_NE6091116/FreeRTOS/include" -I"C:/Users/chien/STM32CubeIDE/workspace_1.5.1/Embedded_OS_Lab2_NE6091116/FreeRTOS/portable/ARM_CM4F" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:34:1: error: unknown type name 'UART_HandleTypeDef'; did you mean 'TIM_HandleTypeDef'?
 UART_HandleTypeDef huart2; // for USART2
 ^~~~~~~~~~~~~~~~~~
 TIM_HandleTypeDef
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:147:10: warning: unused variable 'data' [-Wunused-variable]
  uint8_t data;
          ^~~~
make: *** [Core/Src/subdir.mk:36: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

19:57:35 Build Failed. 2 errors, 1 warnings. (took 518ms)

